--- a/public/Nitrocid.Addons/Nitrocid.Extras.Stocks/Resources/Languages/Output/Localizations.el.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Stocks/Resources/Languages/Output/Localizations.el.resx
@@ -180,5 +180,23 @@
   <data name="NKS_STOCKS_TUI_CANTOBTAININFO" xml:space="preserve">
     <value>Δεν είναι δυνατή η λήψη πληροφοριών μετοχών.</value>
   </data>
+  <data name="NKS_STOCKS_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Τι είναι οι μετοχές;</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP01_DESC" xml:space="preserve">
+    <value>Περιγράφει τι είναι οι πληροφορίες για τις μετοχές</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Οι μετοχές είναι μια ανάλυση της τιμής της μετοχής μιας εταιρείας που είναι εγγεγραμμένη στη βάση δεδομένων μετοχών της εταιρείας, όπως η βάση δεδομένων εγγεγραμμένων εταιρειών του NASDAQ. Καθώς οι τιμές των μετοχών αλλάζουν για κάθε εταιρεία που είναι εγγεγραμμένη, σας παρέχουμε ένα ωριαίο ιστορικό των τιμών των μετοχών της εταιρείας που έχετε επιλέξει, όπως NASDAQ, DOW JONES, κ.λπ.</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP02_TITLE" xml:space="preserve">
+    <value>Πώς να επεξεργαστείτε πληροφορίες για τις μετοχές;</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP02_DESC" xml:space="preserve">
+    <value>Μιλάει για τη διαδικασία κατανόησης των πληροφοριών για τις μετοχές</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP02_BODY" xml:space="preserve">
+    <value>Το διαδραστικό TUI σας παρέχει πληροφορίες για τις μετοχές μιας συγκεκριμένης εταιρείας που παρακολουθείτε, όπως τιμές ανοίγματος και κλεισίματος μετοχών, υψηλές και χαμηλές τιμές μετοχών και άλλες πληροφορίες. Για κάθε ώρα, αυτές οι πληροφορίες αλλάζουν, επομένως θα πρέπει να παρακολουθείτε τις τιμές όσο το δυνατόν πιο προσεκτικά για να έχετε μια βαθιά κατανόηση της απόδοσης των τιμών των μετοχών μιας εταιρείας.</value>
+  </data>
 
 </root>
