--- a/public/Nitrocid.Addons/Nitrocid.Extras.Stocks/Resources/Languages/Output/Localizations.it.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Stocks/Resources/Languages/Output/Localizations.it.resx
@@ -180,5 +180,23 @@
   <data name="NKS_STOCKS_TUI_CANTOBTAININFO" xml:space="preserve">
     <value>Impossibile ottenere informazioni sulle azioni.</value>
   </data>
+  <data name="NKS_STOCKS_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Cosa sono le azioni?</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP01_DESC" xml:space="preserve">
+    <value>Descrive cosa sono le informazioni sulle azioni</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Le azioni sono un&apos;analisi del prezzo delle azioni di una società registrata nel database azionario aziendale, come il database delle società registrate del NASDAQ. Man mano che i prezzi delle azioni per ciascuna società registrata cambiano, forniamo uno storico orario dei prezzi delle azioni della società scelta, come NASDAQ, DOW JONES e così via.</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP02_TITLE" xml:space="preserve">
+    <value>Come elaborare le informazioni sulle azioni?</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP02_DESC" xml:space="preserve">
+    <value>Descrive il processo di comprensione delle informazioni sulle azioni</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP02_BODY" xml:space="preserve">
+    <value>L&apos;interfaccia utente interattiva fornisce informazioni sulle azioni di una particolare società che si sta monitorando, come i prezzi di apertura e chiusura, i prezzi massimi e minimi delle azioni e altre informazioni. Queste informazioni cambiano ogni ora, quindi è necessario monitorare i prezzi il più attentamente possibile per avere una comprensione approfondita dell&apos;andamento dei prezzi delle azioni di una società.</value>
+  </data>
 
 </root>
