--- a/public/Nitrocid.Addons/Nitrocid.Extras.Stocks/Resources/Languages/arb-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Stocks/Resources/Languages/arb-T.json
@@ -115,6 +115,30 @@
     {
       "loc": "NKS_STOCKS_TUI_CANTOBTAININFO",
       "text": "لا يمكن الحصول على معلومات المخزون."
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP01_TITLE",
+      "text": "ما هي الأسهم؟"
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP01_DESC",
+      "text": "يوضح هذا المقال معلومات الأسهم"
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP01_BODY",
+      "text": "الأسهم هي تحليل لسعر سهم شركة مسجلة في قاعدة بيانات أسهمها، مثل قاعدة بيانات الشركات المسجلة في ناسداك. مع تغير أسعار أسهم كل شركة مسجلة، نوفر لك سجلاً كل ساعة لأسعار أسهم الشركة التي تختارها، مثل ناسداك وداو جونز، وغيرها."
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP02_TITLE",
+      "text": "كيف تتم معالجة معلومات الأسهم؟"
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP02_DESC",
+      "text": "يتحدث هذا المقال عن عملية فهم معلومات الأسهم"
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP02_BODY",
+      "text": "توفر لك واجهة المستخدم التفاعلية معلومات عن أسهم شركة معينة تتابعها، مثل أسعار الافتتاح والإغلاق، وأعلى وأدنى أسعار الأسهم، ومعلومات أخرى. تتغير هذه المعلومات كل ساعة، لذا ستحتاج إلى متابعة الأسعار عن كثب لفهم أداء أسهم الشركة بشكل أعمق."
     }
   ]
 }
