--- a/public/Nitrocid.Addons/Nitrocid.Extras.Stocks/Resources/Languages/grk.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Stocks/Resources/Languages/grk.json
@@ -90,6 +90,30 @@
     {
       "loc": "NKS_STOCKS_TUI_CANTOBTAININFO",
       "text": "Δεν είναι δυνατή η λήψη πληροφοριών μετοχών."
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP01_TITLE",
+      "text": "Τι είναι οι μετοχές;"
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP01_DESC",
+      "text": "Περιγράφει τι είναι οι πληροφορίες για τις μετοχές"
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP01_BODY",
+      "text": "Οι μετοχές είναι μια ανάλυση της τιμής της μετοχής μιας εταιρείας που είναι εγγεγραμμένη στη βάση δεδομένων μετοχών της εταιρείας, όπως η βάση δεδομένων εγγεγραμμένων εταιρειών του NASDAQ. Καθώς οι τιμές των μετοχών αλλάζουν για κάθε εταιρεία που είναι εγγεγραμμένη, σας παρέχουμε ένα ωριαίο ιστορικό των τιμών των μετοχών της εταιρείας που έχετε επιλέξει, όπως NASDAQ, DOW JONES, κ.λπ."
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP02_TITLE",
+      "text": "Πώς να επεξεργαστείτε πληροφορίες για τις μετοχές;"
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP02_DESC",
+      "text": "Μιλάει για τη διαδικασία κατανόησης των πληροφοριών για τις μετοχές"
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP02_BODY",
+      "text": "Το διαδραστικό TUI σας παρέχει πληροφορίες για τις μετοχές μιας συγκεκριμένης εταιρείας που παρακολουθείτε, όπως τιμές ανοίγματος και κλεισίματος μετοχών, υψηλές και χαμηλές τιμές μετοχών και άλλες πληροφορίες. Για κάθε ώρα, αυτές οι πληροφορίες αλλάζουν, επομένως θα πρέπει να παρακολουθείτε τις τιμές όσο το δυνατόν πιο προσεκτικά για να έχετε μια βαθιά κατανόηση της απόδοσης των τιμών των μετοχών μιας εταιρείας."
     }
   ]
 }
