--- a/public/Nitrocid.Addons/Nitrocid.Extras.Stocks/Resources/Languages/ind-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Stocks/Resources/Languages/ind-T.json
@@ -89,6 +89,30 @@
     {
       "loc": "NKS_STOCKS_TUI_CANTOBTAININFO",
       "text": "स्टॉक की जानकारी नहीं मिल पा रही है."
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP01_TITLE",
+      "text": "स्टॉक्स क्या हैं?"
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP01_DESC",
+      "text": "स्टॉक्स की जानकारी क्या है, यह बताता है"
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP01_BODY",
+      "text": "स्टॉक्स किसी कंपनी के स्टॉक प्राइस का एनालिसिस है जो कंपनी स्टॉक्स डेटाबेस में रजिस्टर्ड है, जैसे कि NASDAQ का रजिस्टर्ड कंपनी डेटाबेस। जैसे ही हर रजिस्टर्ड कंपनी के स्टॉक प्राइस बदलते हैं, हम आपको आपकी चुनी हुई कंपनी, जैसे कि NASDAQ, DOW JONES, वगैरह के स्टॉक प्राइस की हर घंटे की हिस्ट्री देते हैं।"
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP02_TITLE",
+      "text": "स्टॉक्स की जानकारी को कैसे प्रोसेस करें?"
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP02_DESC",
+      "text": "स्टॉक्स की जानकारी को समझने के प्रोसेस के बारे में बात करता है"
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP02_BODY",
+      "text": "इंटरैक्टिव TUI आपको उस खास कंपनी के बारे में स्टॉक्स की जानकारी देता है जिसे आप ट्रैक कर रहे हैं, जैसे कि ओपनिंग और क्लोजिंग स्टॉक प्राइस, हाई और लो स्टॉक प्राइस, और दूसरी जानकारी। हर घंटे, यह जानकारी बदलती है, इसलिए आपको कंपनी के स्टॉक प्राइस कैसा परफॉर्म करते हैं, इसकी गहरी समझ पाने के लिए प्राइस को जितना हो सके करीब से देखना होगा।"
     }
   ]
 }
