--- a/public/Nitrocid.Addons/Nitrocid.Extras.Stocks/Resources/Languages/ukr.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Stocks/Resources/Languages/ukr.json
@@ -89,6 +89,30 @@
     {
       "loc": "NKS_STOCKS_TUI_CANTOBTAININFO",
       "text": "Не вдається отримати інформацію про акції."
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP01_TITLE",
+      "text": "Що таке акції?"
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP01_DESC",
+      "text": "Описує, що таке інформація про акції"
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP01_BODY",
+      "text": "Акції – це аналіз ціни акцій компанії, зареєстрованої в базі даних акцій компаній, такій як база даних зареєстрованих компаній NASDAQ. Оскільки ціни на акції кожної зареєстрованої компанії змінюються, ми надаємо вам щогодинну історію цін на акції обраної вами компанії, таких як NASDAQ, DOW JONES тощо."
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP02_TITLE",
+      "text": "Як обробляти інформацію про акції?"
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP02_DESC",
+      "text": "Розповідає про процес розуміння інформації про акції"
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP02_BODY",
+      "text": "Інтерактивний TUI надає вам інформацію про акції конкретної компанії, яку ви відстежуєте, таку як ціни відкриття та закриття біржі, максимальні та мінімальні ціни акцій та інша інформація. Ця інформація змінюється щогодини, тому вам потрібно буде стежити за цінами якомога уважніше, щоб мати глибоке розуміння того, як рухаються ціни акцій компанії."
     }
   ]
 }
