--- a/public/Nitrocid.Addons/Nitrocid.Extras.Stocks/Resources/Languages/Output/Localizations.ga.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Stocks/Resources/Languages/Output/Localizations.ga.resx
@@ -180,5 +180,23 @@
   <data name="NKS_STOCKS_TUI_CANTOBTAININFO" xml:space="preserve">
     <value>Ní féidir faisnéis stoic a fháil.</value>
   </data>
+  <data name="NKS_STOCKS_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Cad is scaireanna ann?</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP01_DESC" xml:space="preserve">
+    <value>Déanann cur síos ar cad is faisnéis faoi scaireanna ann</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Is anailís ar phraghas scaireanna cuideachta atá cláraithe i mbunachar sonraí scaireanna cuideachta é scaireanna, amhail bunachar sonraí cuideachtaí cláraithe NASDAQ. De réir mar a athraíonn praghsanna scaireanna do gach cuideachta atá cláraithe, soláthraímid stair uair an chloig duit de phraghsanna scaireanna na cuideachta a roghnaigh tú, amhail NASDAQ, DOW JONES, agus mar sin de.</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP02_TITLE" xml:space="preserve">
+    <value>Conas faisnéis faoi scaireanna a phróiseáil?</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP02_DESC" xml:space="preserve">
+    <value>Labhraíonn sé faoin bpróiseas chun faisnéis faoi scaireanna a thuiscint</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP02_BODY" xml:space="preserve">
+    <value>Soláthraíonn an TUI idirghníomhach faisnéis faoi scaireanna duit faoi chuideachta ar leith atá á rianú agat, amhail praghsanna scaireanna oscailte agus dúnta, praghsanna scaireanna arda agus ísle, agus faisnéis eile. Athraíonn an fhaisnéis seo gach uair an chloig, mar sin beidh ort na praghsanna a fheiceáil chomh dlúth agus is féidir chun tuiscint dhomhain a bheith agat ar fheidhmíocht praghsanna scaireanna cuideachta.</value>
+  </data>
 
 </root>
