--- a/public/Nitrocid.Addons/Nitrocid.Extras.Stocks/Resources/Languages/Output/Localizations.nb.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Stocks/Resources/Languages/Output/Localizations.nb.resx
@@ -180,5 +180,23 @@
   <data name="NKS_STOCKS_TUI_CANTOBTAININFO" xml:space="preserve">
     <value>Kan ikke få aksjeinformasjon.</value>
   </data>
+  <data name="NKS_STOCKS_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Hva er aksjer?</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP01_DESC" xml:space="preserve">
+    <value>Beskriver hva aksjeinformasjon er</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Aksjer er en analyse av aksjekursen til et selskap som er registrert i selskapets aksjedatabase, for eksempel NASDAQs registrerte selskapsdatabase. Etter hvert som aksjekursene endres for hvert registrerte selskap, gir vi deg en timebasert historikk over aksjekursene til det valgte selskapet, for eksempel NASDAQ, DOW JONES og så videre.</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP02_TITLE" xml:space="preserve">
+    <value>Hvordan behandle aksjeinformasjon?</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP02_DESC" xml:space="preserve">
+    <value>Snakker om prosessen med å forstå aksjeinformasjon</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP02_BODY" xml:space="preserve">
+    <value>Den interaktive brukergrensesnittet gir deg aksjeinformasjon om et bestemt selskap du sporer, for eksempel åpnings- og sluttkurser for aksjer, høyeste og laveste aksjekurser og annen informasjon. Denne informasjonen endres hver time, så du må følge med på prisene så nøye som mulig for å få en dyp forståelse av hvordan et selskaps aksjekurser presterer.</value>
+  </data>
 
 </root>
