--- a/public/Nitrocid.Addons/Nitrocid.Extras.Stocks/Resources/Languages/Output/Localizations.pt-BR.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Stocks/Resources/Languages/Output/Localizations.pt-BR.resx
@@ -180,5 +180,23 @@
   <data name="NKS_STOCKS_TUI_CANTOBTAININFO" xml:space="preserve">
     <value>Não é possível obter informações sobre ações.</value>
   </data>
+  <data name="NKS_STOCKS_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>O que são ações?</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP01_DESC" xml:space="preserve">
+    <value>Descreve o que são informações sobre ações.</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Ações é uma análise do preço das ações de uma empresa registrada em um banco de dados de ações, como o da NASDAQ. Como os preços das ações mudam para cada empresa registrada, fornecemos um histórico horário dos preços das ações da empresa escolhida, como NASDAQ, Dow Jones, etc.</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP02_TITLE" xml:space="preserve">
+    <value>Como processar informações sobre ações?</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP02_DESC" xml:space="preserve">
+    <value>Explica o processo de compreensão das informações sobre ações.</value>
+  </data>
+  <data name="NKS_STOCKS_TUI_HELP02_BODY" xml:space="preserve">
+    <value>A interface interativa TUI fornece informações sobre as ações de uma empresa específica que você está acompanhando, como preços de abertura e fechamento, preços máximos e mínimos das ações e outras informações. Essas informações mudam a cada hora, portanto, você precisará observar os preços com atenção para ter uma compreensão profunda do desempenho das ações de uma empresa.</value>
+  </data>
 
 </root>
