--- a/public/Nitrocid.Addons/Nitrocid.Extras.Stocks/Resources/Languages/mal.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Stocks/Resources/Languages/mal.json
@@ -92,6 +92,30 @@
     {
       "loc": "NKS_STOCKS_TUI_CANTOBTAININFO",
       "text": "Tidak dapat maklumat stok."
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP01_TITLE",
+      "text": "Apakah itu saham?"
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP01_DESC",
+      "text": "Menerangkan maklumat saham"
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP01_BODY",
+      "text": "Saham ialah analisis harga saham syarikat yang berdaftar dalam pangkalan data saham syarikat, seperti pangkalan data syarikat berdaftar NASDAQ. Apabila harga saham berubah untuk setiap syarikat yang berdaftar, kami menyediakan anda sejarah harga saham syarikat pilihan anda setiap jam, seperti NASDAQ, DOW JONES, dan sebagainya."
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP02_TITLE",
+      "text": "Bagaimana untuk memproses maklumat saham?"
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP02_DESC",
+      "text": "Membincangkan tentang proses memahami maklumat saham"
+    },
+    {
+      "loc": "NKS_STOCKS_TUI_HELP02_BODY",
+      "text": "TUI interaktif menyediakan anda maklumat saham tentang syarikat tertentu yang anda jejaki, seperti harga saham pembukaan dan penutupan, harga saham tinggi dan rendah, dan maklumat lain. Untuk setiap jam, maklumat ini berubah, jadi anda perlu memerhatikan harga sedekat mungkin untuk memahami prestasi harga saham syarikat dengan lebih mendalam."
     }
   ]
 }
